# summarising-medical-test

./: .gitignore  CsvWriter.py  README.md  README_Commands.md  main.py  output.csv  output_600.csv  output_600_train.csv  output_file.json  pyproject.toml  requirements.txt
api/: manage.py  package-lock.json  requirements.txt
api/accounts/: serializers.py  views.py
api/django_api/: serializers.py  urls.py  views.py
api/django_api/ai_model/: adapter_model.safetensors
api/evaluate/: evaluationValidationData.py  run_evaluation.py  views.py
api/evaluate_model/: apps.py  models.py  run_evaluation.py  serializers.py  views.py
api/evaluate_model/migrations/: 0001_initial.py  0002_evaluationjob_progress.py  0003_evaluationjob_rouge1_evaluationjob_rouge2_and_more.py
api/health/: views.py
api/medical_records/: JsonWriter.py  admin.py  apps.py  csvWriter.py  filters.py  medicalRecordProcessor.py  models.py  serializers.py  views.py  xmlReader.py
api/medical_records/migrations/: 0001_initial.py
api/output/: output_20260414193942.csv  output_20260414194904.csv  output_20260414195224.csv  output_20260414195445.csv  output_20260415064406.csv  output_validation_20260415071239.csv
api/summarising_medical_test_api/: asgi.py  settings.py  urls.py  wsgi.py
api/summarising_medical_test_api/ai_models/: summarise_model_training.ipynb
api/summarising_medical_test_api/notebooks/: summarize_model_training_peft_model.ipynb
api/summarize/: serializers.py  views.py
app/summarising_medical_test_app/: index.html  package-lock.json  package.json  requirements.txt
(+16 files in other folders)
